Bug 90161 URL recognition at the end of line in QP (quoted-printable) misses last character patch by anlan@ida.liu.se r=ducarroz sr=bienvenu